Fix blockquote colour contrast (#11299)
* Fix blockquote colour contrast

* Blockquote update

--- a/res/css/_common.pcss
+++ b/res/css/_common.pcss
@@ -419,6 +419,7 @@ legend {
 
         blockquote {
             border-left: 2px solid $blockquote-bar-color;
+            color: $secondary-content;
             border-radius: 2px;
             padding: 0 10px;
         }
